feat: add AddDefaultValueForVarchar.
